Closed
Bug 1340076
Opened 6 years ago
Closed 6 years ago
Crash in mozilla::CrossProcessSemaphore::CrossProcessSemaphore
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
Tracking | Status | |
---|---|---|
firefox52 | --- | unaffected |
firefox53 | --- | unaffected |
firefox54 | --- | fixed |
People
(Reporter: calixte, Assigned: mattwoodrow)
References
(Blocks 1 open bug)
Details
(Keywords: crash, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file)
1.14 KB,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-13deddba-4599-4179-b6f0-afeea2170215. ============================================================= There are 8 crashes on nightly 54.0a1 with buildid 20170215030342. In analyzing the backtrace, the patch [1] to fix bug 1325227 may have introduce this regression. [1] https://hg.mozilla.org/mozilla-central/rev?node=f01503971a811ecbc86745e1b42311a629f12e41
Flags: needinfo?(matt.woodrow)
Assignee | ||
Comment 1•6 years ago
|
||
I guess some people turned this pref off, which would be bad, since CrossProcessSemaphore doesn't have an OSX impl.
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Attachment #8838355 -
Flags: review?(nical.bugzilla)
Comment 2•6 years ago
|
||
Comment on attachment 8838355 [details] [diff] [review] always-tile-osx Review of attachment 8838355 [details] [diff] [review]: ----------------------------------------------------------------- Ok, but please add a comment here explaining that we force tiling enabled because the non-tiled content client depends on unimplemented cross-process mutex.
Attachment #8838355 -
Flags: review?(nical.bugzilla) → review+
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/99f0792ae01e Force tiling to always be enabled on OSX. r=nical
Comment 4•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/99f0792ae01e
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Updated•6 years ago
|
status-firefox52:
--- → unaffected
status-firefox53:
--- → unaffected
Updated•6 years ago
|
Whiteboard: [clouseau]
You need to log in
before you can comment on or make changes to this bug.
Description
•