Bug 1340076 - Force tiling to always be enabled on OSX. r=nical